# transcribe-with-whisper

./: .dockerignore  .editorconfig  .flake8  .gitignore  .style.yapf  Dockerfile  Dockerfile.cli  Makefile  MercuryScribe.spec  README.md  core.py  main.py  manual_test_token_validation.py  my_video-4.html  pyproject.toml  pytest.ini  requirements-amd64.txt  requirements-arm64.txt  requirements-dev.txt  requirements-windows.txt  requirements.txt  run-transcribe-dev.sh  server.py  setup.py  test-audio.html  test_progress.py  transcribe-with-whisper.py  transcribe-with-whisper.sh  web.py
.github/: trigger-policy.md
.github/workflows/: AUDIT.md  build-windows.yml  ci.yml  docker-multiarch.yml  publish-pypi.yml
artifacts/test-audio/: test-audio.docx  test-audio.html
docs/: README-mercuryscribe.md  README-transcribe-with-whisper.md
examples/: notebooklm-nonsense.docx  notebooklm-nonsense.html
hooks/: hook-asteroid_filterbanks.py  hook-pyannote.audio.py  hook-pyannote.audio.telemetry.py  hook-torch._dynamo.polyfills.py  runtime_utf8.py
my_video-4/: 0.vtt  my_video-4-diarization.txt
packaging/windows/: README_WINDOWS.txt  build_windows.ps1  run_windows.py  start-server.bat
test-audio/: 0.vtt  1.vtt  4.vtt  5.vtt  test-audio-diarization.txt
tests/: conftest.py  test_artifacts_html_docx.py  test_cli_integration.py  test_save_flow_server_app.py  test_save_transcript_edits.py  test_save_transcript_edits_multi_segments.py  test_token_persistence.py  test_token_validation.py
transcribe_with_whisper/: TODO.md  __init__.py  core.py  html_to_docx.py  main.py  server_app.py
whisper_transcribe_to_html/: main.py
(+4 files in other folders)
