[build-system]
requires = ["setuptools==68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcribe-with-whisper"
version = "0.8.3"
description = "Video transcription with speaker diarization and HTML output"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Jay Pfaffman" }
]

keywords = [
    "speech-to-text",
    "whisper",
    "transcription",
    "diarization",
    "audio",
    "video",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "asteroid-filterbanks>=0.4.0",
    "fastapi==0.118.0",
    "faster-whisper==1.2.0",
    "htmldocx>=0.0.6",
    "huggingface-hub==0.35.3",
    "pyannote-audio==4.0.0",
    "pydub==0.25.1",
    "python-docx>=0.8.12",
    "python-multipart==0.0.20",
    "torch==2.8.0",
    "torchcodec==0.7.0",
    "uvicorn[standard]==0.37.0",
    "webvtt-py==0.5.1",
]

[project.scripts]
transcribe-with-whisper = "transcribe_with_whisper.main:main"
mercuryscribe = "transcribe_with_whisper.mercuryscribe:main"

[project.urls]
Homepage = "https://www.mercuryscribe.com/"
Repository = "https://github.com/literatecomputing/transcribe-with-whisper"
Issues = "https://github.com/literatecomputing/transcribe-with-whisper/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
